# MySegaGame

./: .gitignore  CMAKE_BUILD.md  CMAKE_BUILD_SUCCESS.md  CMAKE_FILE_INDEX.md  CMAKE_SETUP_SUMMARY.md  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  QUICKSTART.md  README.md  build-simple.sh  build.bat  build.sh  makefile.sgdk  test-setup.sh  test_resources.c
inc/: globals.h
src/: background.c  bullets.c  clear_sprites.c  ebullets.c  fighters.c  game_level_screen.c  hud.c  main.c  sbullets.c  shield.c  spaceMines.c  title_screen.c
